--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <tr>
                     <td>۳</td>
                     <td>sol</td>
-                    <td>bekar ♮</td><tr>hi</tr>
+                    <td>bekar ♮</td>
                     <td>bekar♮</td>
                     <td>bekar ♮</td>
                 </tr>
@@ -146,7 +146,7 @@
                 <tr>
                     <td>۳</td>
                     <td>sol</td>
-                    <td>bekar ♮</td><tr>hi</tr>
+                    <td>bekar ♮</td>
                     <td>bekar♮</td>
                     <td>bekar ♮</td>
                 </tr>
@@ -175,6 +175,7 @@
         <div class="card" id=8></div>
         
     </div>
+    <p>در این متن کمی چرت و پرت اضافه کرده و آن را مطالعه میکنیم</p>
 </body>
 <script src="mehrdad.js"></script>
 </html>
